# cppinference

./: CMakeLists.txt  README.md  server.cpp
docker_anish/: Dockerfile  adapter-config.yaml  data.csv  depl.yaml  hpa.yaml
docker_anish/projectX/: .gitignore  CMakeLists.txt  README.md  server.cpp
docker_anish/projectX/include/: inference.hpp
docker_anish/projectX/model/: requirements.txt
include/: inference.hpp
model/: train.ipynb
profiling/: profile.py
proxy_server/: reverse_proxy.go
